--- a/indext.html
+++ b/indext.html
@@ -45,6 +45,24 @@
             <img src="images/sahadat.png" alt="">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-widht">
+            <img src="images/sahadatbg.png">
+        </div>
+        <div class="half-widht">
+            <h1>
+                DREAM BIG
+            </h1>
+            <H2>BECOME A WEB DEVELOPER</H2>
+            <P>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.</P>
+            <a class="link-button" href="#" target="_blank">
+                DOWNLOAD RESUME
+            </a>
+        </div>
+
+
+    </section>
 </body>
 
 </html>
