--- a/indext.html
+++ b/indext.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-widht">
             <h1>
                 Welcome to
@@ -45,7 +45,7 @@
             <img src="images/sahadat.png" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-widht">
             <img src="images/sahadatbg.png">
         </div>
@@ -63,6 +63,44 @@
 
 
     </section>
+    <section class="experience-area">
+        <h1>
+            EXPERIENCES
+        </h1>
+        <div class="flexible-container">
+            <div id = FULL-STACK-DEVELOPER class="experience-item">
+                <h2>
+                    FULL STACK DEVELOPER
+                </h2>
+                <H3 class="orenge-color">
+                    2022-present|pro level developer
+                </H3>
+                <p>
+                    I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.
+                </p>
+            </div>
+    
+            <diV id="BABY-WEB-DEVELOPER" class="experience-item">
+                <H2>
+                    BABY WEB DEVELOPER
+                </H2>
+                <h3 class="orenge-color">
+                    2022-2024 | Programming Hero Learner
+                </h3>
+                <p>
+                    They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed
+                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+                </p>
+            </diV>
+        </div>
+    </section>
+    
 </body>
-
+<footer>
+    <p>
+        © Peter Parker 2023, a Programming Hero initiative.
+    </p>
+</footer>
 </html>
