--- a/indext.html
+++ b/indext.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sahadat portfolio</title>
+    <title>sahadat AREFIN portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
@@ -64,7 +64,7 @@
 
     </section>
     <section class="experience-area">
-        <h1>
+        <h1 class="EXPERIENCES">
             EXPERIENCES
         </h1>
         <div class="flexible-container">
@@ -100,7 +100,7 @@
 </body>
 <footer>
     <p>
-        © Peter Parker 2023, a Programming Hero initiative.
+        © sahadat AREFIN 2023, a Programming Hero initiative.
     </p>
 </footer>
 </html>
