--- a/indext.html
+++ b/indext.html
@@ -39,7 +39,7 @@
             <a class="link-button" target="_blank" href="#">
                 HIRE ME
             </a>
-        </div class="half-widht">
+        </div >
 
         <div>
             <img src="images/sahadat.png" alt="">
@@ -100,7 +100,7 @@
 </body>
 <footer>
     <p>
-        © sahadat AREFIN 2023, a Programming Hero initiative.
+        © sahadat AREFIN 2023, a Programming Hero student.
     </p>
 </footer>
 </html>
